# target-mysql

./: README.md  pyproject.toml
target_mysql/: sinks.py  target.py
